--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 <p class="title">Most bought juices</p>
  <div class="adv">
 
-<div class="apple"><a href="apple.html"><img src="fruit/apple.jpg"></a></div>
-<div class="kiwi"><a href="kiwi.html"><img src="fruit/kiwi.jpg"></a></div>
-<div class="mango"><a href="mango.html"><img src="fruit/mango.jpg"></a></div>
-<div class="orange"><a href="orange.html"><img src="fruit/orange.jpg"></a></div>
+<div class="apple"><p class="title">apple</p><a href="apple.html"><img src="fruit/apple.jpg"></a></div>
+<div class="kiwi"><p class="title">kiwi</p><a href="kiwi.html"><img src="fruit/kiwi.jpg"></a></div>
+<div class="mango"><p class="title">mango</p><a href="mango.html"><img src="fruit/mango.jpg"></a></div>
+<div class="orange"><p class="title">orange</p><a href="orange.html"><img src="fruit/orange.jpg"></a></div>
 </div>
 
 <div class="adv">
