--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <p class="title">Most bought juices</p>
  <div class="adv">
 
-<div class="apple"><p class="title">apple</p><a href="apple.html"><img src="fruit/apple.jpg"></a></div>
+<div class="apple"><p class="title">apple</p><a href="product.html"><img src="fruit/apple.jpg"></a></div>
 <div class="kiwi"><p class="title">kiwi</p><a href="kiwi.html"><img src="fruit/kiwi.jpg"></a></div>
 <div class="mango"><p class="title">mango</p><a href="mango.html"><img src="fruit/mango.jpg"></a></div>
 <div class="orange"><p class="title">orange</p><a href="orange.html"><img src="fruit/orange.jpg"></a></div>
